--- a/prometheus-adapter/Dockerfile
+++ b/prometheus-adapter/Dockerfile
@@ -1,2 +1,2 @@
-FROM quay.io/coreos/k8s-prometheus-adapter-amd64:v0.4.1 
+FROM directxman12/k8s-prometheus-adapter:v0.7.0
 MAINTAINER 412327668@qq.com
