--- a/metrics-server/Dockerfile
+++ b/metrics-server/Dockerfile
@@ -1,2 +1,2 @@
-FROM k8s.gcr.io/metrics-server-amd64:v0.4.1
+FROM gcr.io/k8s-staging-metrics-server/metrics-server:v0.4.1
 MAINTAINER 412327668@qq.com
